fixes: testcase component code divs newline not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,3 @@
 .ngx-codemirror {
     border: 1px solid #ccc;
   }
-
-div.code {
-  @apply bg-gray-200 text-black rounded-lg shadow-inner p-2;
-}
